--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,14 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
 .env*.local
 
 # typescript
 *.tsbuildinfo
 
 app-example
+
+project-description.md
+better-auth-expo-doc.mdx
+data.md
