--- a/app.json
+++ b/app.json
@@ -8,9 +8,7 @@
     "scheme": "iw3ticketchecker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true
-    },
+    "ios": { "supportsTablet": true },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
@@ -18,11 +16,7 @@
       },
       "edgeToEdgeEnabled": true
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
+    "web": { "bundler": "metro", "output": "static", "favicon": "./assets/images/favicon.png" },
     "plugins": [
       "expo-router",
       [
@@ -35,8 +29,6 @@
         }
       ]
     ],
-    "experiments": {
-      "typedRoutes": true
-    }
+    "experiments": { "typedRoutes": true }
   }
 }
