--- a/app.json
+++ b/app.json
@@ -8,15 +8,23 @@
     "scheme": "iw3ticketchecker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": { "supportsTablet": true },
+    "ios": {
+      "supportsTablet": true,
+      "bundleIdentifier": "com.godwingbewezoun.IW3TicketChecker"
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.godwingbewezoun.IW3TicketChecker"
     },
-    "web": { "bundler": "metro", "output": "static", "favicon": "./assets/images/favicon.png" },
+    "web": {
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
+    },
     "plugins": [
       "expo-router",
       [
@@ -29,6 +37,15 @@
         }
       ]
     ],
-    "experiments": { "typedRoutes": true }
+    "experiments": {
+      "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "0ab08078-508c-4bbd-a3c7-97a4db7cbea2"
+      }
+    },
+    "owner": "godwingbewezoun"
   }
 }
