--- a/app.json
+++ b/app.json
@@ -8,23 +8,15 @@
     "scheme": "iw3ticketchecker",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.godwingbewezoun.IW3TicketChecker"
-    },
+    "ios": { "supportsTablet": true, "bundleIdentifier": "com.godwingbewezoun.IW3TicketChecker" },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true,
       "package": "com.godwingbewezoun.IW3TicketChecker"
     },
-    "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
-    },
+    "web": { "bundler": "metro", "output": "static", "favicon": "./assets/images/favicon.png" },
     "plugins": [
       "expo-router",
       [
@@ -33,19 +25,16 @@
           "image": "./assets/images/splash-icon.png",
           "imageWidth": 200,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
+          "backgroundColor": "#ffffff",
+          "fade": true,
+          "duration": 1000
         }
-      ]
+      ],
+      "expo-font",
+      "expo-secure-store"
     ],
-    "experiments": {
-      "typedRoutes": true
-    },
-    "extra": {
-      "router": {},
-      "eas": {
-        "projectId": "0ab08078-508c-4bbd-a3c7-97a4db7cbea2"
-      }
-    },
+    "experiments": { "typedRoutes": true },
+    "extra": { "router": {}, "eas": { "projectId": "0ab08078-508c-4bbd-a3c7-97a4db7cbea2" } },
     "owner": "godwingbewezoun"
   }
 }
