--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prebuild": "expo prebuild --clean"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.2",
     "@better-auth/expo": "^1.2.12",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
